# dragonmapper

./: .flake8  .gitignore  .travis.yml  AUTHORS.rst  CHANGES.rst  CHANGES.txt  CONTRIBUTING.rst  Makefile  README.rst  pyproject.toml  requirements.txt  setup.py  tox.ini
.github/workflows/: ci.yml  docs.yml
docs/: Makefile  api.rst  conf.py  index.rst  installation.rst  make.bat  tutorial.rst
dragonmapper/: hanzi.py  html.py  transcriptions.py
dragonmapper/data/: default-style.css  hanzi_jyutping_characters.tsv  hanzi_pinyin_characters.tsv  hanzi_pinyin_words.tsv  test-html-data.txt  transcriptions.csv
dragonmapper/tests/: test-hanzi.py  test-html-data.txt  test-html.py  test-transcriptions.py
src/dragonmapper/: hanzi.py  transcriptions.py
src/dragonmapper/data/: __init__.py  hanzi_pinyin_characters.tsv  hanzi_pinyin_words.tsv  transcriptions.csv
tests/: test_hanzi.py  test_transcriptions.py
